--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -60,7 +60,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#updated ayesha's code\n"
+        "#updated ayesha's code\n",
         "df= pd.read_excel(\"/content/drive/MyDrive/data operations/Session1_Exercise (1).xlsx\")\n",
         "print(df)\n"
       ],
